<resources>
    <string name="app_name" translatable="false">Lab 2</string>
    <string name="textbox" translatable="false"> Look at my GUI</string>
    <string name="button" translatable="false"> Click Here</string>
    <string name="checkbox" translatable="false"> Check this out!</string>
    <string name="Switch" translatable="false"> Switch on/off</string>
    <string name="EditText" translatable="false"> Type here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>