<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textbox"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="7dp"
        android:textSize="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="194dp"
            android:layout_height="85dp"
            android:text="@string/button" />

        <CheckBox
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:text="@string/checkbox" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flag"
            tools:ignore="SpeakableTextPresentCheck" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/Switch" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="402dp"
            android:layout_height="match_parent"
            android:hint="@string/EditText"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />





    </LinearLayout>


</LinearLayout>